--- a/Examenes/ExamenUnidad02/.classpath
+++ b/Examenes/ExamenUnidad02/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Zamira/eclipse-workspace/ExamenUnidad02/Actividad206.jar"/>
+	<classpathentry kind="lib" path="/home/drlotoz/Github/Programacion/Examenes/ExamenUnidad02/Actividad206.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
