--- a/ProyectoActividad4.06Principal/.classpath
+++ b/ProyectoActividad4.06Principal/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/home/drlotoz/Github/Programacion/Libreria.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Zamira/Desktop/Examen programacion/Libreria.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
