--- a/TaskManager/.classpath
+++ b/TaskManager/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Zamira/GitHub/Programacion/TaskManager/jsonLibreria/gson-2.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
