--- a/prog.unidad06.ficheros/.project
+++ b/prog.unidad06.ficheros/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ClasesMultiusos</name>
+	<name>prog.unidad06.ficheros</name>
 	<comment></comment>
 	<projects>
 	</projects>
